# ScrollOfBanestones

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
Data/: SimpleFragmentShader.glsl  SimpleVertexShader.glsl
Documentation/: CoreVision.md  EditorDesign.md  EngineDesign.md  GameDesign.md  Stages.md
Documentation/Images/: ColourPalette.psd
Documentation/Lore/: Races.md
Source/: Application.cpp  Application.hpp  CMakeLists.txt  Logging.cpp  Logging.hpp  ObjectLoader.cpp  ObjectLoader.hpp  README.md  Renderer.cpp  Renderer.hpp  Utility.cpp  Utility.hpp  Vertex.hpp  Window.cpp  Window.hpp  main.cpp
